--- a/TpMate 3.ipynb
+++ b/TpMate 3.ipynb
@@ -4,11 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TP MATE 3    REDES NEURONALES\n",
-    "ALUMNO TRIPODI DANTE \n",
+    "***TP FINAL MATEMATICA III 2024***\n",
+    "\n",
+    "**ALUMNO TRIPODI DANTE**\n",
     "\n",
     "\n",
     "DATASET elegido = https://www.kaggle.com/datasets/danushkhanna/dataset-fullcsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**INFORMACION DEL DATA SET ELEJIDO**\n",
+    "\n",
+    "Este conjunto de datos es un recurso valioso para la detección y análisis de dominios de phishing en URLs. Consiste en una variedad de características extraídas de las URLs para ayudar en la identificación de posibles intentos de phishing. Con múltiples características que capturan diversas características de las URLs, este conjunto de datos ofrece una vista integral de atributos frecuentemente asociados con actividades de phishing"
    ]
   },
   {
@@ -30,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IMPORTANDO  EL DATASET Y MOSTRANDOLO"
+    "IMPORTANDO Y LEYENDO EL DATA SET"
    ]
   },
   {
@@ -1244,7 +1254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "VEMOS CON UN MAPA DE CALOR COMO SE RELACIONAN ENTRE ELLOS "
+    "VEMOS CON UN MAPA DE CALOR LA CORRELACION ENTRE LAS VARIABLES DE MI DATA FRAME "
    ]
   },
   {
@@ -1273,7 +1283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "VEMOS CON UN MAPA DE CALOR LA CORRELACION ENTRE LAS VARIABLES DE MI DATA FRAME"
+    "VEMOS CON UN MAPA DE CALOR LA CORRELACION ENTRE LAS VARIABLES DE MI DATA FRAME PERO CON VALORES NUMERICOS"
    ]
   },
   {
@@ -1835,12 +1845,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a ver cuál es el rendimiento de mi conjunto de datos sin entrenar, aplicando algún algoritmo de optimización como el descenso de gradiente"
+    "Vamos a ver cuál es el rendimiento de mi conjunto de datos sin entrenar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1858,8 @@
      "output_type": "stream",
      "text": [
       "59098\n",
-      "ACCURACY:  0.6522386544382002\n"
+      "ACCURACY:  0.6583302311413002\n",
+      "Accuracy: 65.83%\n"
      ]
     }
    ],
@@ -1891,7 +1902,8 @@
     "test_comparisons = np.equal((test_predictions <= .5).flatten().astype(int),Y_test)\n",
     "accuracy = sum(test_comparisons.astype(int) / X_test.shape[0])\n",
     "\n",
-    "print(\"ACCURACY: \", accuracy)"
+    "print(\"ACCURACY: \", accuracy)\n",
+    "print(f'Accuracy: {accuracy * 100:.2f}%')"
    ]
   },
   {
@@ -1903,14 +1915,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACCURACY:  0.9031439304206572\n"
+      "ACCURACY:  0.9006396155538259\n",
+      "Accuracy: 90.06%\n"
      ]
     }
    ],
@@ -1944,7 +1957,7 @@
     "    return dC_dW1, dC_dB1, dC_dW2, dC_dB2\n",
     "\n",
     "# Ejecutar descenso de gradiente\n",
-    "for i in range(65000):\n",
+    "for i in range(50000):\n",
     "    # seleccionar aleatoriamente un conjunto de datos de entrenamiento\n",
     "    idx = np.random.choice(n, 1, replace=False)\n",
     "    X_sample = X_train[idx].transpose()\n",
@@ -1970,6 +1983,7 @@
     "accuracy = np.mean(test_predictions == Y_test.reshape(1, -1))  # Calcular la precisión comparando las predicciones con los valores reales\n",
     "\n",
     "print(\"ACCURACY: \", accuracy)\n",
+    "print(f'Accuracy: {accuracy * 100:.2f}%')\n",
     "\n",
     "# El valor de precisión (accuracy) es  (mayor q el anterior) indica la proporción de predicciones correctas realizadas \n",
     "# por la red neuronal en el conjunto de prueba (X_test) después de entrenarla mediante el descenso de gradiente. "
@@ -1984,15 +1998,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Puntaje del conjunto de entrenamiento: 0.954804\n",
-      "Puntaje del conjunto de prueba: 0.946428\n"
+      "Puntaje del conjunto de entrenamiento: 0.953315\n",
+      "Puntaje del conjunto de prueba: 0.947342\n",
+      "Puntaje del conjunto de entrenamiento: 95.33%\n",
+      "Puntaje del conjunto de prueba: 94.73%\n"
      ]
     }
    ],
@@ -2034,8 +2050,24 @@
     "train_score = nn.score(X_train, Y_train)\n",
     "test_score = nn.score(X_test, Y_test)\n",
     "print(\"Puntaje del conjunto de entrenamiento: %f\" % train_score)\n",
-    "print(\"Puntaje del conjunto de prueba: %f\" % test_score)"
+    "print(\"Puntaje del conjunto de prueba: %f\" % test_score)\n",
+    "print(f'Puntaje del conjunto de entrenamiento: {train_score * 100:.2f}%')\n",
+    "print(f'Puntaje del conjunto de prueba: {test_score * 100:.2f}%')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "APLICACION CON EJEMPLOS "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
