--- a/TpMate 3.ipynb
+++ b/TpMate 3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "[88647 rows x 112 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "[88647 rows x 14 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,12 +868,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En el bloque de codigo anterior lo que se busco crear un nuevo DataFrame df1 mas limpio y ordenando el cual podamos usar para trabajar de manera mas sencilla.\n",
+    "\n",
+    "Nos aseguramos  de que todos los valores sean enteros.\n",
+    "\n",
+    "y establecimos  que todos los valores menores que -1 sean iguales a -1.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "ANALIZAMOS LAS CORRELACIONES DE LOS DATOS CON EL METODO DE PEARSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1249,7 @@
        "qty_char_domain             -0.021154 -0.160559         1.000000  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1314,12 +1325,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Analizando el grafico  puedo ver que las  variables no estan correlacionadas muy fuertemente  con la variable que me interesa que es la de \"phishing\".\n",
+    "Pero haciendo varias pruebas decidi elejir trabajar con todas para el entrenamiento de mi red neuronal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "RESUMEN ESTADISTICO DEL DATASET"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1561,7 @@
        "max        17.000000      1.000000        30.000000  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1602,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1603,8 +1622,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puedo ver que los datos de mis variables no presentan valores atipicos que me puedan llegar a molestar en el entrenamiento"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1853,7 @@
        "max         1.000000      1.000000         1.000000  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1845,12 +1871,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a ver cuál es el rendimiento de mi conjunto de datos sin entrenar"
+    "\tPARTE 2 DEL TRABAJO PRACTICO-ENTRENAMIENTO DE LA RED\n",
+    "\t**Fordward Propagation**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1858,8 +1885,8 @@
      "output_type": "stream",
      "text": [
       "59098\n",
-      "ACCURACY:  0.6583302311413002\n",
-      "Accuracy: 65.83%\n"
+      "ACCURACY:  0.6531862330364602\n",
+      "Accuracy: 65.32%\n"
      ]
     }
    ],
@@ -1910,26 +1937,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "APLICAMOS DESCENSO DE GRADIENTE ESTOCASTICO"
+    "Aplicamos  el método Descenso de Gradiente Estocástico  para el entrenamiento de la red Neuronal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACCURACY:  0.9006396155538259\n",
-      "Accuracy: 90.06%\n"
+      "ACCURACY:  0.9065619817929541\n",
+      "Accuracy: 90.66%\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "L = 0.001  # La tasa de aprendizaje\n",
+    "L = 0.01  # La tasa de aprendizaje\n",
     "\n",
     "# Devuelve pendientes para pesos y sesgos\n",
     "# usando la regla de la cadena\n",
@@ -1957,8 +1984,8 @@
     "    return dC_dW1, dC_dB1, dC_dW2, dC_dB2\n",
     "\n",
     "# Ejecutar descenso de gradiente\n",
-    "for i in range(50000):\n",
-    "    # seleccionar aleatoriamente un conjunto de datos de entrenamiento\n",
+    "for i in range(60000):\n",
+    "    # Seleccionar aleatoriamente un conjunto de datos de entrenamiento\n",
     "    idx = np.random.choice(n, 1, replace=False)\n",
     "    X_sample = X_train[idx].transpose()\n",
     "    Y_sample = Y_train[idx]\n",
@@ -1966,11 +1993,11 @@
     "    # pasar datos seleccionados aleatoriamente a través de la red neuronal\n",
     "    Z1, A1, Z2, A2 = forward_prop(X_sample)\n",
     "\n",
-    "    # distribuir error a través de la retropropagación\n",
+    "    # Distribuir error a través de la retropropagación\n",
     "    # y devolver pendientes para pesos y sesgos\n",
     "    dW1, dB1, dW2, dB2 = backward_prop(Z1, A1, Z2, A2, X_sample, Y_sample)\n",
     "\n",
-    "    # actualizar pesos y sesgos\n",
+    "    # Actualizar pesos y sesgos\n",
     "    w_hidden -= L * dW1\n",
     "    b_hidden -= L * dB1\n",
     "    w_output -= L * dW2\n",
@@ -1993,22 +2020,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "USAMOS SKLEARN CON SU CLASSIFIER PARA VER CUANtos NOS DA EL ACCURANCY"
+    "COMPARACION CON SKLEARN\n",
+    "\n",
+    "USAMOS SKLEARN CON SU CLASSIFIER PARA VER CUANTO NOS DA EL ACCURANCY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Puntaje del conjunto de entrenamiento: 0.953315\n",
-      "Puntaje del conjunto de prueba: 0.947342\n",
-      "Puntaje del conjunto de entrenamiento: 95.33%\n",
-      "Puntaje del conjunto de prueba: 94.73%\n"
+      "Puntaje del conjunto de entrenamiento: 0.951386\n",
+      "Puntaje del conjunto de prueba: 0.945243\n",
+      "Puntaje del conjunto de entrenamiento: 95.14%\n",
+      "Puntaje del conjunto de prueba: 94.52%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Usuario\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:697: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
      ]
     }
    ],
@@ -2059,15 +2096,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "APLICACION CON EJEMPLOS "
+    "Scikit-learn es una biblioteca de código abierto de machine learning (aprendizaje automático) para el lenguaje de programación Python. \n",
+    "\n",
+    "Es una herramienta popular y ampliamente utilizada por su simplicidad y eficiencia. Scikit-learn proporciona una amplia gama de herramientas para análisis de datos y modelado predictivo.\n",
+    "\n",
+    "Teniendo en cuenta eso y viendo que con esta bibloteca llegamos a un puntaje del 95.33% en conjunto de entrenamientoy un  94.73% en el conjunto de prueba.\n",
+    "Y nosotros llegamos a un 90%  aplicando el metodo Descenso de Gradiente Estocástico \n",
+    "\n",
+    "Podemos deducir que se llegar un entrenamiento correcto y un entrenamiento eficaz sin la necesidad de usar herramientas externas "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2086,7 +2123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
