--- a/TpMate 3.ipynb
+++ b/TpMate 3.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**INFORMACION DEL DATA SET ELEJIDO**\n",
+    "**INFORMACION DEL DATA SET ELEGIDO**\n",
     "\n",
     "Este conjunto de datos es un recurso valioso para la detección y análisis de dominios de phishing en URLs. Consiste en una variedad de características extraídas de las URLs para ayudar en la identificación de posibles intentos de phishing. Con múltiples características que capturan diversas características de las URLs, este conjunto de datos ofrece una vista integral de atributos frecuentemente asociados con actividades de phishing"
    ]
@@ -2020,32 +2020,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "COMPARACION CON SKLEARN\n",
-    "\n",
-    "USAMOS SKLEARN CON SU CLASSIFIER PARA VER CUANTO NOS DA EL ACCURANCY"
+    "COMPARACION CON SKLEARN\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Puntaje del conjunto de entrenamiento: 0.951386\n",
-      "Puntaje del conjunto de prueba: 0.945243\n",
-      "Puntaje del conjunto de entrenamiento: 95.14%\n",
-      "Puntaje del conjunto de prueba: 94.52%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Usuario\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:697: UserWarning: Training interrupted by user.\n",
-      "  warnings.warn(\"Training interrupted by user.\")\n"
+      "Puntaje del conjunto de entrenamiento: 0.953738\n",
+      "Puntaje del conjunto de prueba: 0.947782\n",
+      "Puntaje del conjunto de entrenamiento: 95.37%\n",
+      "Puntaje del conjunto de prueba: 94.78%\n"
      ]
     }
    ],
